moving everything to either req or res for response json
