# config/routes.rb
@@ -4,11 +4,11 @@ Rails.application.routes.draw do
 
   # collections
   get '/collections' => 'collection#index', as: :collections
-  get '/collection/:shortname' => 'collection#show', as: :collection
   get '/collection/:shortname/info' => 'collection#info', as: :collection_info
 
   # items
   get '/items' => 'item#index', as: :items
   get '/item/:id' => 'item#show', as: :item, :constraints => { :id => id_regex }
   get '/collection/:shortname/item/:id' => 'item#show', as: :collection_item, :constraints => { :id => id_regex }
+  get '/collection/:shortname' => 'item#index', as: :collection_items
 end
